k8s/ingressroute-pi-origin.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cloudless-pi-origin
  namespace: cloudless
  annotations:
    traefik.io/v1alpha1: 'true'
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`pi-origin.cloudless.gr`)
    services:
    - name: cloudless-app
      port: 80
